// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected at large width 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-2 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-5"
                    >
                      <span
                        class="makeStyles-statusDot-10 makeStyles-staging-8"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-11"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-1"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-11"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-13 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                  Assign Metric
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-12 makeStyles-root-14"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-5"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        >
          <h3
            class="MuiTypography-root makeStyles-title-15 MuiTypography-h3 MuiTypography-colorTextPrimary"
          >
            Audience
          </h3>
        </div>
        <table
          class="MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Platform
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                calypso
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                User Type
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                New users only
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Variations
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <table
                  class="MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Name
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Percent
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        control
                        <span
                          class="makeStyles-default-16 makeStyles-root-14"
                        >
                          Default
                        </span>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        60
                        %
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        test
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        40
                        %
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Segments
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <table
                  class="MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Locales
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        segment_1
                      </td>
                    </tr>
                  </tbody>
                </table>
                <table
                  class="MuiTable-root"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Countries
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body"
                      >
                        segment_2
                        <span
                          class="makeStyles-excluded-17 makeStyles-root-14"
                        >
                          Excluded
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Exposure Events
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <div
                  class="makeStyles-eventList-20"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    No exposure events defined
                  </p>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected at small width 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-22 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-25"
                    >
                      <span
                        class="makeStyles-statusDot-30 makeStyles-staging-28"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-31"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-21"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-31"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-35 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    calypso
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    New users only
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            control
                            <span
                              class="makeStyles-default-36 makeStyles-root-34"
                            >
                              Default
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            test
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_1
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_2
                            <span
                              class="makeStyles-excluded-37 makeStyles-root-34"
                            >
                              Excluded
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-40"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        No exposure events defined
                      </p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-33 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                  Assign Metric
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-32 makeStyles-root-34"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected with conclusion data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-42 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-45"
                    >
                      <span
                        class="makeStyles-statusDot-50 makeStyles-disabled-49"
                      />
                       
                      disabled
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-51"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-41"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-51"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-57 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    calypso
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    New users only
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            control
                            <span
                              class="makeStyles-default-58 makeStyles-root-54"
                            >
                              Default
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            test
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_1
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_2
                            <span
                              class="makeStyles-excluded-59 makeStyles-root-54"
                            >
                              Excluded
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-62"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        No exposure events defined
                      </p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-53 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                  Assign Metric
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-52 makeStyles-root-54"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-55 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Conclusions
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Reason the experiment ended
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Ran its course.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Conclusion URL
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://betterexperiments.wordpress.com/experiment_1/conclusion"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://betterexperiments.wordpress.com/experiment_1/conclusion
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Deployed variation
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected without conclusion data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-64 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-67"
                    >
                      <span
                        class="makeStyles-statusDot-72 makeStyles-staging-70"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-73"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-63"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-73"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-77 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    calypso
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    New users only
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            control
                            <span
                              class="makeStyles-default-78 makeStyles-root-76"
                            >
                              Default
                            </span>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            test
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_1
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body"
                          >
                            segment_2
                            <span
                              class="makeStyles-excluded-79 makeStyles-root-76"
                            >
                              Excluded
                            </span>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-82"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        No exposure events defined
                      </p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-75 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                  Assign Metric
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-74 makeStyles-root-76"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
